Complet web devlopment

--- a/index.html
+++ b/index.html
@@ -5,9 +5,50 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <title>My First Portfolio</title>
 </head>
 <body>
-    
+        <section class="welcome-section">
+                <div class="first-part">
+                    <h2>Welcome To </h2>
+                    <h2><span class="font-color">My Web</span> Portfolio</h2>
+                    <h4>Some Content Is There</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam debitis sit recusandae illum eveniet voluptates esse est aliquam enim sequi reiciendis, ullam nihil tenetur rem non numquam odit quo facere?</p>
+                    <a class="Click-button"href="#" target="_blank"> HERE ME</a>
+                </div>
+                <div class="first-part">
+                    <img src="images/jhankar.png" alt="">
+
+                </div>
+        </section>
+        <section class="Dream-section">
+            <div class="first-part">
+                <img src="images/jhankar2.png" alt="">
+            </div>
+            <div class="first-part">
+                <h3>Dream Big</h3>
+                <h6>Become a Web Devloper</h6>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia temporibus velit dolore saepe? Culpa quaerat numquam inventore repellendus aperiam cumque suscipit  Quasi corporis non nostrum iure dignissimos.</p>
+                <a class="Click-button"href="#" target="_blank"> DOWNLOAD RESUME</a>
+            </div>
+        </section>
+        <section class="expriance-section">
+            <div id="full-stack" class="expri-sec">
+                    <h2>Full Stack Web Devloper</h2>
+                    <h5>2021 - Present| Pro Level Devloper</h5>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis explicabo, tempore sapiente delectus dicta, necessitatibus maiores impedit vero soluta modi a dolor. Itaque, perspiciatis adipisci.</p>
+            </div>
+            <div id="baby-web" class="expri-sec">
+                <h2>Baby Web Devloper</h2>
+                <h5>2020-2021 | Programming Hero Learner</h5>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem laboriosam sequi possimus reiciendis, unde modi totam itaque doloremque accusamus velit sapiente mollitia fuga impedit quis? Commodi distinctio ea temporibus ipsum.</p>
+            </div>
+        </section>
+        <footer>
+                <p>@ Touhed Islam all reserve...</p>
+        </footer>
+      
 </body>
 </html>
